<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="tu_sofia.ivanmishev.bg.educationalgamequiz.WrongAnswerScreen"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/quiz_background1"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wrong_answer_text"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:id="@+id/wrongAnswerText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_points_default_text"
        android:textColor="#ffffff"
        android:layout_marginTop="20dp"
        android:id="@+id/sessionPointsText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/current_number_default_text"
        android:id="@+id/numberOfQuestionText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:text="@string/current_question_default_text"
        android:id="@+id/currentQuestionText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:id="@+id/correctAnswerText"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/new_game_button_text"
        android:onClick="playAgain"
        android:id="@+id/playAgainButton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_screen_button_text"
        android:onClick="backToHome"
        android:id="@+id/homeButton"/>


</LinearLayout>
