<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="tu_sofia.ivanmishev.bg.educationalgamequiz.GameScreen"
    android:orientation="vertical"
    android:background="@drawable/background_clould"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:textAllCaps="false"
            android:text="@string/myghty_blaster_button_text"
            android:padding="1dp"
            android:textStyle="bold"
            android:id="@+id/fiftyButton"
            android:onClick="useMightyBlaster"
            android:background="@drawable/custom_button"
            />

        <Button
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:textAllCaps="false"
            android:text="@string/wise_alien_button_text"
            android:padding="1dp"
            android:textStyle="bold"
            android:id="@+id/friendButton"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:onClick="useWiseAlienButton"
            android:background="@drawable/custom_button"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:textAllCaps="false"
            android:text="@string/consortium_button_text"
            android:textStyle="bold"
            android:textSize="13sp"
            android:id="@+id/crowdButton"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:padding="1dp"
            android:onClick="useConsortiumButton"
            android:background="@drawable/custom_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="75sp"
            android:layout_height="30sp"
            android:text="@string/session_points_def_text"
            android:textStyle="bold"
            android:textAlignment="center"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:id="@+id/sessionPointsText"
            android:textColor="#ffffff"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="75sp"
            android:layout_height="30sp"
            android:text="@string/session_random_points_def_text"
            android:textStyle="bold"
            android:textAlignment="center"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:id="@+id/randomPointsForCurrentAnswerText"
            android:textColor="#ffffff"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="75sp"
            android:layout_height="30sp"
            android:text="@string/session_q_counter_def_text"
            android:textStyle="bold"
            android:textAlignment="center"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:id="@+id/sessionQuestionCounterText"
            android:textColor="#ffffff"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        android:gravity="center|fill_horizontal">
        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/question_text_def_text"
            android:id="@+id/questionText"
            android:textColor="#ffffff"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="left|bottom"
        android:layout_gravity="bottom">

        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textAllCaps="false"
            android:text="@string/aButtonBlank"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:id="@+id/aButton"
            android:onClick="checkAnswer"
            android:singleLine="true"
            android:background="@drawable/custom_button"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textAllCaps="false"
            android:text="@string/bButtonBlank"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:id="@+id/bButton"
            android:onClick="checkAnswer"
            android:singleLine="true"
            android:background="@drawable/custom_button"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textAllCaps="false"
            android:text="@string/cButtonBlank"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:id="@+id/cButton"
            android:onClick="checkAnswer"
            android:singleLine="true"
            android:background="@drawable/custom_button"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textAllCaps="false"
            android:text="@string/dButtonBlank"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:id="@+id/dButton"
            android:onClick="checkAnswer"
            android:singleLine="true"
            android:background="@drawable/custom_button"/>

    </LinearLayout>

</LinearLayout>
