<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@drawable/background_clould">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overall_score_text"
        android:layout_marginBottom="30dp"
        android:textSize="17sp"
        android:id="@+id/overallScoreText"
        android:textColor="#ffffff"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/new_game_button_text"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:onClick="startNewGame"
        android:id="@+id/startNewGameButton"
        android:background="@drawable/custom_button"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/exit_button_text"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:onClick="exitApp"
        android:id="@+id/exitButton"
        android:background="@drawable/custom_button"/>


</LinearLayout>